# mcp-treeofthoughts

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG_LATEST_VERSIONS.md  Conversão de FastAPI para fastmcp - MCP TreeOfThoughts.md  DEPLOY_TOKEN_FIXO.md  Documento Conceitual e Arquitetônico do MCP TreeOfThoughts.md  Documento de Funcionamento do MCP TreeOfThoughts.md  FASTMCP_CLOUD_DEPENDENCIES.md  FASTMCP_CLOUD_TOKEN_FIX.md  FASTMCP_ENTERPRISE_GUIDE.md  FORCE_REDEPLOY.md  IMPLEMENTATION_SUMMARY.md  JWT_FIXES_SUMMARY.md  MCP - TreeOfThoughts.md  README.md  Relatório de Ajustes - MCP TreeOfThoughts.md  Relatório de Análise Profunda do Projeto MCP TreeOfThoughts.md  Relatório de Melhorias - MCP TreeOfThoughts.md  T17_E2E_AUTHENTICATION_IMPLEMENTATION.md  __init__.py  base.py  beam_search.py  best_first_search.py  bge_reranker.py  current_token.txt  cursor_config.json  debug_fastmcp_jwt.py  defaults.json  final_validation.sh  generate_valid_jwt.py  graph.py  hybrid_evaluator.py  llm_client.py  mcp_config.py  models.py  nodes.py  pasted_file_FkcQZk_server.py  prompts.py  pyproject.toml  (+14 more)
k8s/: README.md  autoscaling.yaml  configmap.yaml  deploy.sh  monitoring.yaml  namespace.yaml  network.yaml  rbac.yaml  secrets.yaml  service.yaml  statefulset.yaml
scripts/: generate_token_via_manager.py  run_e2e_auth_tests.py  simple_test.py  test_client.py  test_oauth_flow.py
scripts_backup/: debug_auth.py
src/: __init__.py  auth_providers.py  base.py  exceptions.py  execution_manager.py  graph.py  hybrid_evaluator.py  jwt_manager.py  llm_client.py  models.py  nodes.py  (+1 more)
(+33 files in other folders)
